{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 207,
  "lineage": "be09f584-b05b-5ff8-7a55-88aab4946f05",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:465443875617:loadbalancer/app/vlab-dev-backend-alb/35cd95b79dcff859",
            "arn_suffix": "app/vlab-dev-backend-alb/35cd95b79dcff859",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-vlab-dev-backend-alb-749516695.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:465443875617:loadbalancer/app/vlab-dev-backend-alb/35cd95b79dcff859",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vlab-dev-backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02df03db36c290372"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c5577ea6de81aa1b"
              },
              {
                "subnet_id": "subnet-0f183e286ec7748db"
              }
            ],
            "subnets": [
              "subnet-0c5577ea6de81aa1b",
              "subnet-0f183e286ec7748db"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-backend-alb",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-backend-alb",
              "Project": "vlab"
            },
            "vpc_id": "vpc-0e4baa01ea0c0fd2d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apigw_vpclink",
            "aws_security_group.backend_alb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:465443875617:listener/app/vlab-dev-backend-alb/35cd95b79dcff859/fc636fdb75068ec4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:465443875617:targetgroup/vlab-dev-backend-tg/dc4e5f8cce07c627",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:465443875617:listener/app/vlab-dev-backend-alb/35cd95b79dcff859/fc636fdb75068ec4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:465443875617:loadbalancer/app/vlab-dev-backend-alb/35cd95b79dcff859",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.backend",
            "aws_lb_target_group.backend",
            "aws_security_group.apigw_vpclink",
            "aws_security_group.backend_alb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:465443875617:targetgroup/vlab-dev-backend-tg/dc4e5f8cce07c627",
            "arn_suffix": "targetgroup/vlab-dev-backend-tg/dc4e5f8cce07c627",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:465443875617:targetgroup/vlab-dev-backend-tg/dc4e5f8cce07c627",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:465443875617:loadbalancer/app/vlab-dev-backend-alb/35cd95b79dcff859"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vlab-dev-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-backend-tg",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-backend-tg",
              "Project": "vlab"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:route-table/rtb-0de3351130b9eea37",
            "id": "rtb-0de3351130b9eea37",
            "owner_id": "465443875617",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-private-rt-1",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-private-rt-1",
              "Project": "vlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:route-table/rtb-0d8b9873141bf0713",
            "id": "rtb-0d8b9873141bf0713",
            "owner_id": "465443875617",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-private-rt-2",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-private-rt-2",
              "Project": "vlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0519e960fb3fd66df",
            "route_table_id": "rtb-0de3351130b9eea37",
            "subnet_id": "subnet-0c5577ea6de81aa1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0886927ca73390a88",
            "route_table_id": "rtb-0d8b9873141bf0713",
            "subnet_id": "subnet-0f183e286ec7748db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apigw_vpclink",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:security-group/sg-0473f341b5de40e43",
            "description": "Security group for API Gateway VPC Link ENIs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow VPC link to reach backend ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0473f341b5de40e43",
            "ingress": [],
            "name": "vlab-dev-apigw-vpclink-sg",
            "name_prefix": "",
            "owner_id": "465443875617",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-apigw-vpclink-sg",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-apigw-vpclink-sg",
              "Project": "vlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:security-group/sg-058a7da1f83b463f9",
            "description": "Security group for backend execution proxy service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058a7da1f83b463f9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow internal ALB to reach backend",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02df03db36c290372"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "vlab-dev-backend-sg",
            "name_prefix": "",
            "owner_id": "465443875617",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-backend-sg",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-backend-sg",
              "Project": "vlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apigw_vpclink",
            "aws_security_group.backend_alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:security-group/sg-02df03db36c290372",
            "description": "Security group for internal ALB in front of backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ALB to reach backend tasks",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02df03db36c290372",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow API Gateway VPC link to call ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0473f341b5de40e43"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vlab-dev-backend-alb-sg",
            "name_prefix": "",
            "owner_id": "465443875617",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-backend-alb-sg",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-backend-alb-sg",
              "Project": "vlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apigw_vpclink",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:security-group/sg-09bda27b37016e4bf",
            "description": "Security group for ephemeral lab tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bda27b37016e4bf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Lambdas to call warm session runtime",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0583b23fb05abfff4"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "vlab-dev-ecs-task-sg",
            "name_prefix": "",
            "owner_id": "465443875617",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-ecs-task-sg",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-ecs-task-sg",
              "Project": "vlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:security-group/sg-0583b23fb05abfff4",
            "description": "Security group for lab control Lambdas",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0583b23fb05abfff4",
            "ingress": [],
            "name": "vlab-dev-lambda-sg",
            "name_prefix": "",
            "owner_id": "465443875617",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-lambda-sg",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-lambda-sg",
              "Project": "vlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:security-group/sg-0d9d980bd61789344",
            "description": "Security group for interface VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow endpoint responses",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9d980bd61789344",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow VPC resources to call endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0583b23fb05abfff4",
                  "sg-058a7da1f83b463f9",
                  "sg-09bda27b37016e4bf"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vlab-dev-vpce-sg",
            "name_prefix": "",
            "owner_id": "465443875617",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-vpce-sg",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-vpce-sg",
              "Project": "vlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apigw_vpclink",
            "aws_security_group.backend",
            "aws_security_group.backend_alb",
            "aws_security_group.ecs_tasks",
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:subnet/subnet-0c5577ea6de81aa1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5577ea6de81aa1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "465443875617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-private-1",
              "Project": "vlab",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-private-1",
              "Project": "vlab",
              "Tier": "private"
            },
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:subnet/subnet-0f183e286ec7748db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.40.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f183e286ec7748db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "465443875617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-private-2",
              "Project": "vlab",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-private-2",
              "Project": "vlab",
              "Tier": "private"
            },
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:vpc/vpc-0e4baa01ea0c0fd2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-0b21c720fa343e8ff",
            "default_route_table_id": "rtb-082c2da64863b3481",
            "default_security_group_id": "sg-05429ed05b25ca152",
            "dhcp_options_id": "dopt-0c69ebb4ca70f7a94",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4baa01ea0c0fd2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082c2da64863b3481",
            "owner_id": "465443875617",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-vpc",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-vpc",
              "Project": "vlab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:vpc-endpoint/vpce-0e98007c5aa0bf311",
            "cidr_blocks": [
              "35.71.100.0/25",
              "35.71.100.128/26",
              "52.94.20.0/24"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e98007c5aa0bf311",
            "ip_address_type": "ipv4",
            "owner_id": "465443875617",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-66a7420f",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0d8b9873141bf0713",
              "rtb-0de3351130b9eea37"
            ],
            "service_name": "com.amazonaws.ap-south-1.dynamodb",
            "service_region": "ap-south-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-dynamodb-endpoint",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-dynamodb-endpoint",
              "Project": "vlab"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:vpc-endpoint/vpce-0a5ee5890cba53def",
            "dns_entry": [
              {
                "dns_name": "vpce-0a5ee5890cba53def-508znk5a.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0a5ee5890cba53def-508znk5a-ap-south-1a.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0a5ee5890cba53def-508znk5a-ap-south-1b.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "api.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z07125813U6O9HQ9QCCYY"
              },
              {
                "dns_name": "ecr.ap-south-1.api.aws",
                "hosted_zone_id": "Z07125842AR1GZAX1BC4J"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a5ee5890cba53def",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09a4f2e182cb8de0a",
              "eni-0af958c42ed60ffbd"
            ],
            "owner_id": "465443875617",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d9d980bd61789344"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.api",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.40.1.25",
                "subnet_id": "subnet-0c5577ea6de81aa1b"
              },
              {
                "ipv4": "10.40.2.79",
                "subnet_id": "subnet-0f183e286ec7748db"
              }
            ],
            "subnet_ids": [
              "subnet-0c5577ea6de81aa1b",
              "subnet-0f183e286ec7748db"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-ecr-api-endpoint",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-ecr-api-endpoint",
              "Project": "vlab"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apigw_vpclink",
            "aws_security_group.backend",
            "aws_security_group.backend_alb",
            "aws_security_group.ecs_tasks",
            "aws_security_group.lambda",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:vpc-endpoint/vpce-0c19c9172191194b4",
            "dns_entry": [
              {
                "dns_name": "vpce-0c19c9172191194b4-hnet6rak.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0c19c9172191194b4-hnet6rak-ap-south-1b.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0c19c9172191194b4-hnet6rak-ap-south-1a.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "dkr.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z07103293SHEGLCUI26D"
              },
              {
                "dns_name": "*.dkr.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z07103293SHEGLCUI26D"
              },
              {
                "dns_name": "dkr-ecr.ap-south-1.on.aws",
                "hosted_zone_id": "Z09358632H2EMSGV5JP3P"
              },
              {
                "dns_name": "*.dkr-ecr.ap-south-1.on.aws",
                "hosted_zone_id": "Z09358632H2EMSGV5JP3P"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c19c9172191194b4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-013f001fc5911bc7c",
              "eni-05a58b27c34c9d0cb"
            ],
            "owner_id": "465443875617",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d9d980bd61789344"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.dkr",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.40.1.249",
                "subnet_id": "subnet-0c5577ea6de81aa1b"
              },
              {
                "ipv4": "10.40.2.36",
                "subnet_id": "subnet-0f183e286ec7748db"
              }
            ],
            "subnet_ids": [
              "subnet-0c5577ea6de81aa1b",
              "subnet-0f183e286ec7748db"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-ecr-dkr-endpoint",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-ecr-dkr-endpoint",
              "Project": "vlab"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apigw_vpclink",
            "aws_security_group.backend",
            "aws_security_group.backend_alb",
            "aws_security_group.ecs_tasks",
            "aws_security_group.lambda",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:vpc-endpoint/vpce-0bdd64a71a73ca054",
            "dns_entry": [
              {
                "dns_name": "vpce-0bdd64a71a73ca054-uc6y5l45.ecs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0bdd64a71a73ca054-uc6y5l45-ap-south-1b.ecs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0bdd64a71a73ca054-uc6y5l45-ap-south-1a.ecs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "ecs.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z076115420AC8DS0OFE6W"
              },
              {
                "dns_name": "ecs.ap-south-1.api.aws",
                "hosted_zone_id": "Z017535716R5884QKSPIR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bdd64a71a73ca054",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-084793bb251e3eaca",
              "eni-0d05c5ee7ef1133de"
            ],
            "owner_id": "465443875617",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d9d980bd61789344"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecs",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.40.1.209",
                "subnet_id": "subnet-0c5577ea6de81aa1b"
              },
              {
                "ipv4": "10.40.2.142",
                "subnet_id": "subnet-0f183e286ec7748db"
              }
            ],
            "subnet_ids": [
              "subnet-0c5577ea6de81aa1b",
              "subnet-0f183e286ec7748db"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-ecs-endpoint",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-ecs-endpoint",
              "Project": "vlab"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apigw_vpclink",
            "aws_security_group.backend",
            "aws_security_group.backend_alb",
            "aws_security_group.ecs_tasks",
            "aws_security_group.lambda",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:vpc-endpoint/vpce-0baf13f6aa13719bc",
            "dns_entry": [
              {
                "dns_name": "vpce-0baf13f6aa13719bc-nplh0g6j.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0baf13f6aa13719bc-nplh0g6j-ap-south-1a.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0baf13f6aa13719bc-nplh0g6j-ap-south-1b.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "logs.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z01756722XYULFEU33D5I"
              },
              {
                "dns_name": "streaming-logs.ap-south-1.api.aws",
                "hosted_zone_id": "Z0175674325JYA1S7ZD69"
              },
              {
                "dns_name": "streaming-logs.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z07095683MZ47OM74LLX2"
              },
              {
                "dns_name": "logs.ap-south-1.api.aws",
                "hosted_zone_id": "Z01753371DVK30B5VUTBN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0baf13f6aa13719bc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06d12dba5ae0b9b4a",
              "eni-07f48090b0fb57dfb"
            ],
            "owner_id": "465443875617",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d9d980bd61789344"
            ],
            "service_name": "com.amazonaws.ap-south-1.logs",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.40.1.175",
                "subnet_id": "subnet-0c5577ea6de81aa1b"
              },
              {
                "ipv4": "10.40.2.17",
                "subnet_id": "subnet-0f183e286ec7748db"
              }
            ],
            "subnet_ids": [
              "subnet-0c5577ea6de81aa1b",
              "subnet-0f183e286ec7748db"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-logs-endpoint",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-logs-endpoint",
              "Project": "vlab"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apigw_vpclink",
            "aws_security_group.backend",
            "aws_security_group.backend_alb",
            "aws_security_group.ecs_tasks",
            "aws_security_group.lambda",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:vpc-endpoint/vpce-074edec027efc3922",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.3.0/24",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-074edec027efc3922",
            "ip_address_type": "ipv4",
            "owner_id": "465443875617",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0d8b9873141bf0713",
              "rtb-0de3351130b9eea37"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "service_region": "ap-south-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-s3-endpoint",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-s3-endpoint",
              "Project": "vlab"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "scheduler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465443875617:vpc-endpoint/vpce-0c637bb7f7b9de8b2",
            "dns_entry": [
              {
                "dns_name": "vpce-0c637bb7f7b9de8b2-ijg6zkr5.scheduler.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0c637bb7f7b9de8b2-ijg6zkr5-ap-south-1a.scheduler.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0c637bb7f7b9de8b2-ijg6zkr5-ap-south-1b.scheduler.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "scheduler.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z07546961QFIDLZUXM4A9"
              },
              {
                "dns_name": "scheduler.ap-south-1.api.aws",
                "hosted_zone_id": "Z093636137IW59TEI81J7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c637bb7f7b9de8b2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0245e56053f5106a8",
              "eni-0a062c976c9e43cb3"
            ],
            "owner_id": "465443875617",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d9d980bd61789344"
            ],
            "service_name": "com.amazonaws.ap-south-1.scheduler",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.40.1.166",
                "subnet_id": "subnet-0c5577ea6de81aa1b"
              },
              {
                "ipv4": "10.40.2.113",
                "subnet_id": "subnet-0f183e286ec7748db"
              }
            ],
            "subnet_ids": [
              "subnet-0c5577ea6de81aa1b",
              "subnet-0f183e286ec7748db"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-scheduler-endpoint",
              "Project": "vlab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vlab-dev-scheduler-endpoint",
              "Project": "vlab"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e4baa01ea0c0fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apigw_vpclink",
            "aws_security_group.backend",
            "aws_security_group.backend_alb",
            "aws_security_group.ecs_tasks",
            "aws_security_group.lambda",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}